k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-node-service
spec:
  selector:
    app: devsu-node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
